--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
     />
     <div class="display"></div>
     <button class="gen-btn">Generate a word!</button>
+    <script src="script.js"></script>
   </body>
 </html>
