--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     />
     <div class="display"></div>
     <button class="gen-btn">Generate a word!</button>
+    <button class="gen-cyr-btn">Generate a Cyrillic word!</button>
     <script src="script.js"></script>
   </body>
 </html>
