css + better js

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <div class="display"></div>
     <button class="gen-btn">Generate a word!</button>
     <button class="gen-cyr-btn">Generate a Cyrillic word!</button>
+    <button class="mutate-btn hidden">Mutate word</button>
+    <button class="save-btn hidden">Save</button>
     <script src="script.js"></script>
   </body>
 </html>
