--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <button class="gen-cyr-btn">Generate a Cyrillic word!</button>
     <button class="mutate-btn hidden">Mutate word</button>
     <button class="save-btn hidden">Save</button>
+    <ul class="display_words"></ul>
     <script src="script.js"></script>
   </body>
 </html>
